# Atom_Query_Bot

./: .env  .gitignore  .replit  LICENSE  README.md  atom_bot.py  bot.py  choice.json  config.py  env.example.json  git.sh  help.py  main.py  option.json  pyproject.toml  requirement.txt  requirements.txt  test.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  deploy.yml
cogs/: geometry.py  hlp_cmd.py  hlp_command.py  hlpcmd.py  normal.py  physics.py  trigonometry.py  unit.py
components/: cartesia.py  geometry.py  hlp_cmd.py  normal.py  physics.py  test_cmd.py  trigonometry.py  unit.py
extension/: Converter.py  Geometry.py  Physics.py  Plot.py  Query.py  Set.py  Test.py  Trigonometry.py  algebra.py  cartesia.py  geometry.py  hlp_cmd.py  normal.py  physics.py  tempCodeRunnerFile.py  test.py  test_cmd.py  trigonometry.py  unit.py  unit_converter.py
extension/cartesia/: cog_1.py  cog_2.py  index.py  main.py
extension/geometry/: cog_1.py  cog_2.py  index.py  main.py
extension/normal/: cog_1.py  cog_2.py  index.py  main.py
extension/physics/: cog_1.py  cog_2.py  index.py  main.py
extension/trigonometry/: cog_1.py  cog_2.py  index.py  main.py
extension/unit/: cog_1.py  cog_2.py  index.py  main.py
package/: pyproject.toml  requirement.txt
setup/: .gitignore
test/: online.py
tools/: .gitignore  .replit
